# self-tftp

./: .gitignore  CMakeLists.txt  Is it true.txt  Makefile  README.md
source/: common.hpp  controller.cpp  controller.hpp  files.cpp  files.hpp  filesystem.cpp  filesystem.hpp  main.cpp  packets.cpp  packets.hpp  server.cpp  server.hpp  utils.cpp  utils.hpp
